<resources>
    <string name="base_url_live">http://api.dunkeydelivery.com/api/</string>
    <string name="base_url_qa">http://api.dunkeydelivery.com/api/</string>
    <string name="base_url_dev">http://api.dunkeydelivery.com/api/</string>
    <string name="base_url_qa_image">http://api.dunkeydelivery.com/</string>
    <string name="base_url_dev_image">http://api.dunkeydelivery.com/</string>
    <string name="base_url_live_image">http://api.dunkeydelivery.com/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="store_hours_time">Selected Time Is Not Between Store Hours</string>
    <string name="no_shedule">No Schedule Option Selected</string>
    <string name="time_required">Time required</string>
    <string name="date_required">Date required</string>
    <string name="time_date_required">Date required</string>
    <string name="default_product_name">Burger</string>
    <string name="asap">ASAP</string>
    <string name="today">Today</string>
    <string name="later">Later</string>
    <string name="app_name">Dunkey Delivery</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="verify_credit_card">Verifying Credit Card</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_creditcardnumberlength">Please enter a valid card number</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enable_location_msg"><![CDATA[To allow the app to use your location to find nearby stores go to \"Settings\" > turn on \"Location\".]]></string>
    <string name="no_results">No Result(s)</string>
    <string name="no_category">No categories are currently available</string>
    <string name="no_products">No products are currently available</string>
    <string name="no_products_available">No Deals and Promotions are currently available.</string>
    <string name="no_orders">No Order(s)</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_points">Points</string>
    <string name="your_account">Your Account</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="title_delivery_points">Delivery Points</string>
    <string name="my_account">My Account</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_user">New user?</string>
    <string name="create_account">Create Account</string>
    <string name="create_account2"><font color='#474747'>New user?</font> Create Account</string>
    <string name="connect_with_fb">Connect With Facebook</string>
    <string name="connect_with_google">Connect With Google</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_fb">Continue with Facebook</string>
    <string name="OR">OR</string>
    <string name="submit">Submit</string>
    <string name="please_enter_your_email">Please enter your registered email address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="reset">Reset</string>
    <string name="an_email_send">An email has been sent to your account with password reset link.</string>
    <string name="error_passwords_not_match">Passwords do not match</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="change_your_password">Change your password</string>
    <string name="password_changing">Changing your password</string>
    <string name="continue_str">Continue</string>
    <string name="add_credit_card_details">Add Credit Card Details</string>
    <string name="add_new_address">Add new address</string>
    <string name="update">Update</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change Password</string>
    <string name="add_new_credit_card_capital">Add New Credit Card</string>
    <string name="add_new_credit_card">Add new credit card</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="zip_code">Zip Code</string>
    <string name="label">Label <font color='#bdbdbd'>(Optional)</font> </string>
    <string name="set_as_default"><b>Set as default</b> (Optional)</string>
    <string name="cvv">CVV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="suit_address">Suite, floor, apartment</string>
    <string name="city">City</string>
    <string name="state_code">State Code</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="set_frequency">Set Frequency</string>
    <string name="call">Call</string>
    <string name="email_us">Email Us</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_optional">Phone number <font color='#bdbdbd'>(optional)</font></string>
    <string name="reason_for_contact">Reason for contact</string>
    <string name="add_special_instructions">Add Special instructions</string>
    <string name="send">Send</string>
    <string name="comment_on_site">Comment on the site</string>
    <string name="question_about_site">Question about the site</string>
    <string name="report_techincal_issue">Report technical issue</string>
    <string name="bussiness_inquiry">Business inquiry</string>
    <string name="we_never_stop">We Never stop</string>
    <string name="delivering">Delivering</string>
    <string name="in_progress">In Progress</string>
    <string name="order_id">Order ID</string>
    <string name="order_detail">Order Detail</string>
    <string name="thank_for_your_order">Thank you for your order</string>
    <string name="here_are_the_details">Here are the details</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="service_fee">Service Fee</string>
    <string name="total">Total</string>
    <string name="alcohol">Alcohol</string>
    <string name="food">Food</string>
    <string name="grocery">Grocery</string>
    <string name="laundry">Laundry</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="retail">Retail</string>
    <string name="near_you">Near You</string>
    <string name="view_menu">View Menu</string>
    <string name="view_store">View Store</string>
    <string name="store_detail">Store Detail</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="dummy_text2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="dummy_text3">New Offer</string>
    <string name="your_bag">Your Bag</string>
    <string name="add_more_items">Add more Items</string>
    <string name="go_to_checkout">Go to Checkout</string>
    <string name="order_summary">Order Summary</string>
    <string name="tax">Order Tax : </string>
    <string name="tip">Order Tip 12%</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card_info">Credit Card Information</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Paypal</string>
    <string name="monthly">Monthly</string>
    <string name="one_time">One Time</string>
    <string name="weekly">Weekly</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="item_summary">Item Summary</string>
    <string name="place_order">Place Order</string>
    <string name="place_your_order">Place your order</string>
    <string name="checkout">Checkout</string>
    <string name="thank_you">Thank You</string>
    <string name="order_history">Order History</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="order_date">Order Date</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="subtotal">Subtotal</string>
    <string name="service_fee_0_3">Service fee 0.3%</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed and will be dispatched soon. Meanwhile you can check status of your order.</string>
    <string name="thank_you_for_your_order">Thank you for your order</string>
    <string name="payment">Payment</string>
    <string name="additional_note">Additional Note</string>
    <string name="frequency">Frequency</string>
    <string name="dunkey_delivery_reviews">Dunkey delivery reviews</string>
    <string name="based_on">Based on <font color='#000000'>98 ratings</font> and <font color='#000000'>43 reviews</font></string>
    <string name="location">Location</string>
    <string name="delivery_hours">Delivery Hours</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="wednessday">Wednesday</string>
    <string name="google_server_client_key">635411899430-374k9vojoav4tam5f22ri6tpi0k54m6l.apps.googleusercontent.com</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="cuisines">Cuisines</string>
    <string name="sort_by">Sort by:</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="dry_cleaning">Dry Cleaning</string>
    <string name="tailoring">Tailoring</string>
    <string name="please_make_choice">Please make a choice</string>
    <string name="entire_load">Entire Load</string>
    <string name="itemize">Itemize</string>
    <string name="note_laundry">Note: The Cleaner will update your bill after pickup.</string>
</resources>