<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:hedgehog="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/bg_drycleaning" />

        <app.com.dunkeydelivery.utils.customviews.widgets.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x8dp"
            android:paddingLeft="@dimen/x10dp"
            android:paddingRight="@dimen/x10dp"
            android:paddingTop="@dimen/x15dp"
            android:text="@string/dry_cleaning"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_moderate"
            app:customFont="Montserrat-Regular_0.otf" />


        <app.com.dunkeydelivery.utils.customviews.widgets.CustomTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x4dp"
            android:paddingLeft="@dimen/x10dp"
            android:paddingRight="@dimen/x10dp"
            android:text="@string/dummy_text"
            android:textColor="@color/grey4"
            android:textSize="@dimen/text_size_small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/x18dp"
            android:background="@color/grey_lighter" />

        <app.com.dunkeydelivery.utils.customviews.widgets.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x8dp"
            android:paddingLeft="@dimen/x10dp"
            android:paddingRight="@dimen/x10dp"
            android:paddingTop="@dimen/x15dp"
            android:text="@string/please_make_choice"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_moderate"
            app:customFont="Montserrat-Regular_0.otf" />


        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x10dp"
            android:background="@drawable/rect_grey_border"
            android:orientation="horizontal"
            android:padding="@dimen/x5dp">

            <app.com.dunkeydelivery.utils.customviews.widgets.CustomRadioButton
                android:id="@+id/tv_entire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="@dimen/x8dp"
                android:text="@string/entire_load"
                android:textColor="@color/tab_text_selector_light"
                android:textSize="@dimen/text_size_moderate"
                app:customFont2="Montserrat-Regular_0.otf" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_lighter" />

            <app.com.dunkeydelivery.utils.customviews.widgets.CustomRadioButton
                android:id="@+id/tv_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="@dimen/x8dp"
                android:text="@string/itemize"
                android:textColor="@color/tab_text_selector_light"
                android:textSize="@dimen/text_size_moderate"
                app:customFont2="Montserrat-Regular_0.otf" />


        </RadioGroup>

        <app.com.dunkeydelivery.utils.customviews.widgets.CustomTextView
            android:id="@+id/tv_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x20dp"
            android:paddingLeft="@dimen/x10dp"
            android:paddingRight="@dimen/x10dp"
            android:text="@string/note_laundry"
            android:textColor="@color/grey4"
            android:textSize="@dimen/text_size_small" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="true"
            android:nestedScrollingEnabled="false"
            android:padding="@dimen/x8dp"
            android:visibility="gone">

        </android.support.v7.widget.RecyclerView>


        <app.com.dunkeydelivery.utils.customviews.widgets.CustomEditText
            android:id="@+id/et_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x10dp"
            android:layout_marginTop="@dimen/x20dp"
            android:background="@drawable/rect_grey_border"
            android:gravity="left|top"
            android:hint="@string/add_special_instructions"
            android:maxLength="200"
            android:maxLines="15"
            android:minHeight="150dp"
            android:padding="@dimen/x8dp"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/text_size_moderate" />


        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x20dp"
            android:layout_marginLeft="@dimen/x10dp"
            android:layout_marginRight="@dimen/x10dp"
            android:layout_marginTop="@dimen/x10dp"
            android:background="@drawable/green_rounded_btn"
            android:padding="@dimen/x12dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>