<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mainbg"
    tools:context="architecture.app.com.apparchitecture.activities.auth.LoginActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white" />


    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/x12dp"
        android:paddingRight="@dimen/x12dp"
        android:orientation="vertical">

        <app.com.dunkeydelivery.utils.customviews.widgets.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey3"
            android:layout_marginTop="@dimen/x30dp"
            android:gravity="center"
            android:text="@string/please_enter_your_email"/>

        <app.com.dunkeydelivery.utils.customviews.widgets.CustomEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/x30dp"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/x4dp"
            android:layout_marginRight="@dimen/x4dp"
            android:paddingTop="@dimen/x10dp"
            android:paddingBottom="@dimen/x10dp"
            android:drawablePadding="@dimen/x10dp"
            android:background="@null"
            android:textColor="@color/grey3"
            android:textSize="@dimen/text_size_moderate"
            android:drawableLeft="@drawable/ic_email"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark"/>


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x30dp"
            android:text="@string/submit"
            android:padding="@dimen/x12dp"
            android:background="@drawable/green_rounded_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />




    </LinearLayout>
</LinearLayout>
